# FORetrieval

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  app.py  pyproject.toml
FORetrieval/: __init__.py
FORetrieval/foretrieval/: __init__.py  colpali.py
FORetrieval/foretrieval/integrations/: __init__.py  _langchain.py
FORetrieval/tests/: test_processor.py
benchmark_results/: sol_a.json  sol_b.json
byaldi/: colpali.py  file_to_pdf.py
config/: default.json  schema.json
doc/: task_0_report.md
docker/RAG_DB/: .env.example  README.md  docker-compose.yml
docker/RAG_DB_Milvus/: .env.example  README.md  docker-compose.yml
docker/RAG_Orch/: .env.milvus  .env.qdrant  Dockerfile  README.md  docker-compose.yml  requirements.txt
docker/RAG_Orch/app/: config.py  embeddings.py  helpers.py  indexing.py  main.py  progress.py  schemas.py  vector_store.py
forag/agents/: __init__.py  agentic_generation.py  agentic_retrieval.py  digest.py  image_analysis.py
forag/agents/backends/: common.py  mistral.py  ollama.py
forag/generator/: generator.py
forag/generator/backends/: mistral.py  ollama.py
foretrieval/: __init__.py  colpali.py  docling_ingest.py  file_to_pdf.py  metadata.py  models_metadata.py  objects.py  plot_utils.py  retriever.py  utils.py
foretrieval/client/: __init__.py  embedding_backends.py  remote_backend.py  transport.py
foretrieval/embedding_server/: __init__.py  client.py  config.py  manager.py
foretrieval/integrations/: __init__.py
foretrieval/server/: __init__.py  embedding_server.py  server_main.py
sample_data/: sample_csv.csv  sample_doc.doc  sample_docx.docx  sample_epub.epub  sample_html.html  sample_json.json  sample_md.md  sample_odp.odp  sample_ods.ods  sample_odt.odt  sample_ppt.ppt  sample_pptx.pptx  sample_rtf.rtf  sample_tif.tif  sample_txt.txt  sample_xls.xls  sample_xlsx.xlsx  sample_yaml.yaml
scripts/: benchmark.py  run-docker.sh
tests/: all.py  conftest.py  test_colpali.py  test_colqwen.py  test_e2e_rag.py  test_embedding_server.py  test_embedding_server_integration.py  test_metadata_ai.py  test_metadata_filter.py  test_metadata_no_ai.py  test_qdrant.py  test_quantization.py  test_remote_mode.py
