[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["foretrieval*"]

[project]
name = "FORetrieval"
version = "0.1"
description = "Use late-interaction multi-modal models such as ColPali in just a few lines of code."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = [
    "reranking",
    "retrieval",
    "rag",
    "nlp",
    "colpali",
    "colbert",
    "multi-modal",
]
authors = [{ name = "The FOR team", email = "for@irt-saintexupery.com" }]

dependencies = [
    "colpali-engine>=0.3.4,<0.4.0",
    "ml-dtypes",
    "srsly",
    "torch",
    "transformers>=4.42.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.1.9"]
server = ["uvicorn", "fastapi"]
langchain = ["langchain-core"]
pdf2image = ["pdf2image"]


[project.urls]
"Homepage" = "https://github.com/answerdotai/byaldi"

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]
markers = ["slow: marks test as slow"]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "*.ipynb",
    "examples",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
output-format = "grouped"

target-version = "py312"

[tool.ruff.lint]
select = [
    # bugbear rules
    "B",
    "I",
    # remove unused imports
    "F401",
    # bare except statements
    "E722",
    # unused arguments
    "ARG",
]
ignore = ["B006", "B018"]

unfixable = ["T201", "T203"]
ignore-init-module-imports = true
