[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["foretrieval*"]

[project]
name = "FORetrieval"
version = "0.1"
description = "Use late-interaction multi-modal models such as ColPali in just a few lines of code."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = [
    "reranking",
    "retrieval",
    "rag",
    "nlp",
    "colpali",
    "colbert",
    "multi-modal",
]
authors = [{ name = "The FOR team", email = "for@irt-saintexupery.com" }]

dependencies = [
    "colpali-engine>=0.3.4,<0.4.0",
    "docx2pdf>=0.1.8",
    "langdetect>=1.0.9",
    "ml-dtypes",
    "pydantic-ai>=1.4.0",
    "pydantic-ai-slim[openai]>=1.8.0",
    "pypdf>=6.1.3",
    "srsly",
    "torch>=2.7.1",
    "transformers>=4.42.0",
    "pdf2image>=1.17.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.1.9"]
server = ["uvicorn", "fastapi"]
langchain = ["langchain-core"]
extra_converters = [
    "docx2pdf>=0.1.8; sys_platform == \"win32\"",
    "reportlab>=4.4.4",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]

[project.urls]
"Homepage" = "https://github.com/FOR-sight-ai/FORetrieval"

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]
markers = ["slow: marks test as slow"]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "*.ipynb",
    "examples",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
output-format = "grouped"

target-version = "py312"

[tool.ruff.lint]
select = [
    # bugbear rules
    "B",
    "I",
    # remove unused imports
    "F401",
    # bare except statements
    "E722",
    # unused arguments
    "ARG",
]
ignore = ["B006", "B018"]

unfixable = ["T201", "T203"]
ignore-init-module-imports = true
